Revert "fix(user.css): hide topbar overflow"
This reverts commit 56024455fc5d9a16da0ce02d0809a4a2ea7ddf2a.
because of #259

--- a/src/user.css
+++ b/src/user.css
@@ -275,7 +275,6 @@ html {
 
 .main-topBar-container {
   padding-inline-end: 167px !important;
-  overflow: hidden;
 }
 
 .main-entityHeader-withBackgroundImage {
